--- a/HTML/personal.html
+++ b/HTML/personal.html
@@ -31,9 +31,14 @@
     </nav>
 <section class="timeline">
   <ul>
+  <li>
+      <div>
+        <h2>Oct, 2019 - Present</h2> Marketing and Programme Intern at Work and Travel
+      </div>
+    </li>
    <li>
       <div>
-        <h2>Mar, 2019 - present</h2> Accommodation Assistant at theKey Collection
+        <h2>Mar, 2019 - Oct, 2019</h2> Accommodation Assistant at theKey Collection
       </div>
     </li>
     <li>
