--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -30,6 +30,23 @@
         </ul>
     </nav>
     <div class="container">
+       <section>
+            <div class = "row">
+                <div class = "col-sm-12">
+                    <h1> Aurelia DeLyall Regency Style</h1>
+                    <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | GitHub</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-3">
+                    <a href="https://github.com/RMSchrader1994/Regency" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"><h4>GitHub Link</h4></a>
+                    </div>
+                    <div class="col-sm-3">
+                    <a href="https://aureliadelyallregencystyle.co.uk" target="_blank"><img src="../Media/IMG/regency.jpg" alt="Regency Business Card"><h4>Site Link</h4>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section>
             <div class = "row">
                 <div class = "col-sm-12">
