--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -42,7 +42,7 @@
                     <a href="https://github.com/RMSchrader1994/Regency" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"><h4>GitHub Link</h4></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://aureliadelyallregencystyle.co.uk" target="_blank"><img src="../Media/IMG/regency.jpg" alt="Regency Business Card"><h4>Site Link</h4>
+                    <a href="https://rmschrader1994.github.io/Regency/" target="_blank"><img src="../Media/IMG/regency.jpg" alt="Regency Business Card"><h4>Site Link</h4>
                     </a>
                 </div>
             </div>
