--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -81,7 +81,8 @@
                 </div>
             </div>
         </section>
-        <section>
+        
+       <!-- <section>
             <div class = "row">
                 <div class = "col-sm-12">
                     <h1> Back End Development: Dragon Age Inquisition Quests</h1>
@@ -97,7 +98,8 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </section> -->
+        
         <section>
             <div class = "row">
                 <div class = "col-sm-12">
