--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -39,7 +39,7 @@
             <br />
             <h3><strong>Mobile:</strong> 0838722970</h3>
             <br />
-            <h3><strong>Location:</strong> Dublin, Ireland</h3>
+            <h3><strong>Location:</strong> Galway, Ireland</h3>
             <br />
         </div>
         <div class="col-md-2"></div>
@@ -47,8 +47,6 @@
             <h1>Social Media</h1>
             <hr>
             <h3><strong>GitHub:</strong> <a href="https://github.com/RMSchrader1994/"> RMSchrader1994</a></h3>
-            <br />
-            <h3><strong>Twitter: </strong><a href="https://twitter.com/schrader_may">@schrader_may</a></h3>
             <br />
             <h3><strong>Behance:</strong> <a href="https://www.behance.net/rebeccaschrader"> rebeccaschrader</a></h3>
             <br />
