--- a/HTML/personal.html
+++ b/HTML/personal.html
@@ -31,9 +31,14 @@
     </nav>
 <section class="timeline">
   <ul>
+   <li>
+      <div>
+        <h2>Sep, 2020 - Present</h2> Moved to Galway, Ireland and started at Alison as a Publishing Contractor.
+      </div>
+    </li>
   <li>
       <div>
-        <h2>Oct, 2019 - Present</h2> Marketing and Programme Intern at Work and Travel
+        <h2>Oct, 2019 - Apr, 2020</h2> Marketing and Programme Intern at Work and Travel
       </div>
     </li>
    <li>
