--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     
                 </div>   
                 <div class="col-md-8">
-                <p>Creatively minded full stack and multimedia developer. <br />Dual Citizen: British/American</p>
+                <p>Qualified Multimedia Developer. <br />Dual Citizen: British/American</p>
                 </div>
             </div>
         </header>
